--- a/src/playground/playground.component.html
+++ b/src/playground/playground.component.html
@@ -10,7 +10,7 @@
   </div>
 </section>
 <section>
-  <header>
+  <header class="body-1-proxima-soft-bold">
     <h2>Button with icon</h2>
   </header>
   <hr />
